# LocalNetworkProtector

./: .gitignore  README.md  README_RPI.md  RELEASE_NOTES.md  config.sample.yaml  config.yaml  config.yaml.sample  docker-compose.yaml  lnp_main.py  localnetworkprotector.service  pyproject.toml  requirements.txt  run.sh  setup.sh
config/: prometheus.yml
config/grafana/dashboards/: lnp_dashboard.json
localnetworkprotector/: __init__.py  alerts.py  config.py  database.py  detector.py  eero_manager.py  monitor.py  notifier.py  packet_utils.py  repo_scanner.py  scanner.py  telemetry.py  tsunami.py  vulnerability.py  web.py
localnetworkprotector/templates/: base.html  devices.html  index.html  login.html  repo_scan_detail.html  repo_scans.html  scan_detail.html  scans.html  tsunami.html
scripts/: __init__.py  build_release.sh  check_metrics.py  eero_login.py  generate_cert.sh  generate_password_hash.py  install_rpi.sh  install_scalibr.sh  install_tsunami.sh  simulate_traffic.py
tests/: test_config.py  test_database.py  test_monitor.py  test_repo_scanner.py  test_scanner.py  test_web.py
