[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localnetworkprotector"
version = "0.1.0"
description = "Monitor local network traffic and scan suspicious hosts on Raspberry Pi."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "scapy>=2.5.0",
  "python-nmap>=0.7.1",
  "requests>=2.31.0",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-prometheus>=0.40b0",
  "prometheus-client",
  "eero",
  "schedule",
  "flask",
]

[project.scripts]
lnp = "lnp_main:main"

[tool.setuptools]
include-package-data = true
py-modules = ["lnp_main"]

[tool.setuptools.packages.find]
include = ["localnetworkprotector*"]

[tool.setuptools.package-data]
localnetworkprotector = ["templates/*.html"]
